// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="option-block"
>
  <div
    className="label"
  >
    Start Offset
  </div>
  <UnitInput
    abbr={false}
    className={
      Object {
        "option-input": true,
      }
    }
    decimal={0}
    defaultValue={0}
    disabled={false}
    displayMultiValue={false}
    forceUsePropsUnit={false}
    getValue={[MockFunction]}
    isDoOnInput={false}
    max={100}
    min={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    step={1}
    type="text"
    unit=""
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="option-block"
>
  <div
    className="label"
  >
    Start Offset
  </div>
  <UnitInput
    abbr={false}
    className={
      Object {
        "option-input": true,
      }
    }
    decimal={0}
    defaultValue={0}
    disabled={false}
    displayMultiValue={false}
    forceUsePropsUnit={false}
    getValue={[MockFunction]}
    isDoOnInput={false}
    max={100}
    min={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    step={1}
    type="text"
    unit=""
  />
</div>
`;

exports[`should render correctly 3`] = `
<div
  className="option-block"
>
  <div
    className="label"
  >
    Start Offset
  </div>
  <UnitInput
    abbr={false}
    className={
      Object {
        "option-input": true,
      }
    }
    decimal={0}
    defaultValue={0}
    disabled={false}
    displayMultiValue={false}
    forceUsePropsUnit={false}
    getValue={
      [MockFunction] {
        "calls": Array [
          Array [
            100,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    isDoOnInput={false}
    max={100}
    min={0}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    step={1}
    type="text"
    unit=""
  />
</div>
`;
